--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ html {
 }
 
 .sidebar {
-  width: 300px;
+  width: 400px;
   background: #fff;
   padding: 80px 20px 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
@@ -28,7 +28,8 @@ html {
   z-index: 2;
 }
 
-.search-input {
+.search-input,
+.artist-select {
   width: 100%;
   padding: 10px;
   border: none;
