--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,61 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Trebuchet MS', sans-serif;
+@import "utils.css";
+
+
+
+.outer-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100vh;
+  background-color: #00274d;
+  color: white;
 }
 
-body,
-html {
+.inner-container {
+  display: flex;
+  width: calc(100% - 240px);
+  background-color: white;
+  border-radius: 12px;
+  padding: 20px;
+  margin-right: 20px;
+  color: black;
+  height: calc(100vh - 40px);
+  margin-left: auto;
+  box-sizing: border-box;
+}
+
+
+.left-section {
+  display: flex;
+  flex: 1;
+  gap: 20px;
+}
+
+.column {
+  flex: 1;
+  background-color: #f0f0f0;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.map-section {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background: #ddd;
+  position: relative;
+}
+
+.map-placeholder {
   width: 100%;
   height: 100%;
+  background-color: #ccc;
+  border-radius: 8px;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
@@ -45,89 +91,4 @@ html {
   width: 100vw;
   background: #ddd;
   position: relative;
-}
-
-.toggle-btn {
-  display: none;
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  background: #333;
-  color: #fff;
-  padding: 10px;
-  border: none;
-  cursor: pointer;
-  z-index: 10;
-  border-radius: .2rem;
-}
-
-.loading-component {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
-
-.spinner {
-  width: 50px;
-  height: 50px;
-  animation: rotate 1s linear infinite;
-}
-
-.spinner-circle {
-  stroke: #3498db;
-  stroke-dasharray: 150, 200;
-  stroke-dashoffset: 0;
-  stroke-linecap: round;
-  animation: dash 1.5s ease-in-out infinite;
-}
-
-@keyframes rotate {
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes dash {
-  0% {
-    stroke-dasharray: 1, 200;
-    stroke-dashoffset: 0;
-  }
-
-  50% {
-    stroke-dasharray: 100, 200;
-    stroke-dashoffset: -15px;
-  }
-
-  100% {
-    stroke-dasharray: 150, 200;
-    stroke-dashoffset: -125px;
-  }
-}
-
-.loading-message {
-  font-size: 1rem;
-  color: #333;
-}
-
-@media (max-width: 768px) {
-  .sidebar {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100vh;
-    transform: translateX(-100%);
-  }
-
-  .toggle-btn {
-    display: block;
-  }
-
-  .sidebar.open {
-    transform: translateX(0);
-  }
 }
