adding country data, add icons to left

--- a/src/utils.css
+++ b/src/utils.css
@@ -5,6 +5,10 @@
     font-family: 'Trebuchet MS', sans-serif;
 }
 
+ul {
+    list-style: none;
+}
+
 .loading-message {
     font-size: 1rem;
     color: #333;
