--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 @import "utils.css";
 
-
-
 .outer-container {
   display: flex;
   justify-content: flex-start;
@@ -13,29 +11,32 @@
 
 .inner-container {
   display: flex;
-  width: calc(100% - 240px);
+  width: calc(100% - 12.5rem);
   background-color: white;
-  border-radius: 12px;
-  padding: 20px;
-  margin-right: 20px;
+  border-radius: 0.75rem;
+  padding: 1.25rem;
+  margin-right: 1.25rem;
   color: black;
-  height: calc(100vh - 40px);
+  height: calc(100vh - 2.5rem);
   margin-left: auto;
   box-sizing: border-box;
 }
 
-
 .left-section {
   display: flex;
   flex: 1;
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .column {
   flex: 1;
   background-color: #f0f0f0;
-  padding: 20px;
-  border-radius: 8px;
+  padding: 1.25rem;
+  border-radius: 0.5rem;
+}
+
+.column-2 {
+  display: none;
 }
 
 .map-section {
@@ -52,7 +53,7 @@
   width: 100%;
   height: 100%;
   background-color: #ccc;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,28 +63,23 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  /* Ensure full viewport height */
 }
 
 .sidebar {
-  width: 400px;
-  background: #fff;
-  padding: 80px 20px 20px;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease-in-out;
-  z-index: 2;
+  padding: 2rem;
+  align-self: flex-start;
 }
 
 .search-input,
 .artist-select {
   width: 100%;
-  padding: 10px;
+  padding: 0.625rem;
   border: none;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 0.0625rem solid #ccc;
   outline: none;
   font-size: 1.2rem;
   color: #333;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .map-container {
