--- a/src/App.css
+++ b/src/App.css
@@ -93,25 +93,34 @@
   margin-bottom: 0.75rem;
 }
 
-.artist-list,
+.artist-list {
+  min-width: 24rem;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  padding: 1rem;
+  border-radius: 0.4rem;
+  scrollbar-width: none;
+  position: relative;
+  max-height: 25.75rem;
+}
+
+.artist-list.full-height {
+  max-height: 60rem;
+}
+
 .artwork-list {
   margin-bottom: 2rem;
   min-width: 24rem;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
-  max-height: 18.75rem;
-  border: 1px solid var(--light-blue);
+  max-height: 48rem;
   padding: 1rem;
   border-radius: 0.4rem;
   scrollbar-width: none;
   position: relative;
-}
-
-.artwork-list {
   align-items: center;
-  max-height: 38rem;
-  border: none;
 }
 
 .artist-list::-webkit-scrollbar {
