--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,10 @@
   box-sizing: border-box;
 }
 
-.left-section {}
+.left-section {
+  min-width: 24rem;
+  max-width: 24rem;
+}
 
 .right-section {
   flex: 2;
