styling gallery select

--- a/src/App.css
+++ b/src/App.css
@@ -273,9 +273,6 @@
   background-color: #f9f9f9;
   border-radius: 8px;
   padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-top: 20px;
-  transition: all 0.3s ease;
 }
 
 .selected-gallery-info h4 {
@@ -296,10 +293,10 @@
   color: #333;
 }
 
-.selected-gallery-info:hover {
+/* .selected-gallery-info:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
+} */
 
 .selected-gallery-info a {
   color: #007bff;
