--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,16 @@
 
 }
 
+.artwork-list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 1.4rem;
+  justify-content: flex-start;
+  overflow-x: auto;
+  overflow-y: auto;
+  width: 100%;
+}
+
 .artist-list::-webkit-scrollbar,
 .artist-list::-webkit-scrollbar {
   display: none;
@@ -175,16 +185,32 @@
   margin-top: 2rem;
 }
 
-.artwork-list {
+.artist-container {
   display: flex;
-  flex-wrap: nowrap;
-  gap: 1.4rem;
-  justify-content: flex-start;
-  overflow-x: auto;
-  overflow-y: auto;
-  width: 100%;
-
+  align-items: center;
+  gap: 8px;
+  padding: 8px;
 }
+
+.artist-image img {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.artist-title {
+  flex-grow: 1;
+  margin: 0;
+}
+
+.close-icon-right {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 .artwork-card {
   flex-shrink: 0;
@@ -276,7 +302,7 @@
 }
 
 .selected-gallery-info h4 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: #333;
   font-weight: bold;
   margin-bottom: 10px;
@@ -297,6 +323,12 @@
   transform: translateY(-5px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 } */
+
+.close-icon-right {
+  cursor: pointer;
+  display: flex;
+  justify-content: flex-end;
+}
 
 .selected-gallery-info a {
   color: #007bff;
