--- a/src/utils.css
+++ b/src/utils.css
@@ -11,14 +11,16 @@
 
 html {
     font-size: 14px;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Verdana, sans-serif;
-
 }
 
 ul {
