--- a/src/App.css
+++ b/src/App.css
@@ -125,10 +125,9 @@
 }
 
 .list .list-item {
-  padding: .5rem;
+  padding: .3rem;
   display: flex;
   align-items: center;
-  margin-bottom: 0.625rem;
   border-radius: .5rem;
 }
 
@@ -144,7 +143,6 @@
   overflow: hidden;
   border-radius: 50%;
   margin-right: 0.625rem;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -178,6 +176,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.no-artworks-message {
+  font-size: 1.2rem;
+  color: var(--dark-grey);
+  text-align: center;
 }
 
 .artwork-list {
