--- a/src/App.css
+++ b/src/App.css
@@ -144,12 +144,28 @@
   overflow: hidden;
   border-radius: 50%;
   margin-right: 0.625rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .list-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.list-image svg {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.list-image .list-svg {
+  width: 60%;
+  height: 60%;
+  object-fit: contain;
 }
 
 .list-title {
@@ -164,53 +180,15 @@
   justify-content: center;
 }
 
-.list.icon {}
-
-.artist-list,
-.gallery-list {
-  min-width: 24rem;
+.artwork-list {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  max-height: 46rem;
   padding: 1rem;
-  border-radius: 0.4rem;
   scrollbar-width: none;
-  position: relative;
-  max-height: 25.75rem;
-}
-
-.artist-list.full-height,
-.gallery-list.full-height {
-  max-height: 60rem;
-}
-
-.artwork-list,
-.gallery-list {
-  margin-bottom: 2rem;
-  min-width: 24rem;
-  display: flex;
-  flex-direction: column;
-  overflow-y: auto;
-  max-height: 48rem;
-  padding: 1rem;
-  border-radius: 0.4rem;
-  scrollbar-width: none;
-  position: relative;
   line-height: 1.4rem;
   gap: 1.4rem;
-}
-
-.artist-list::-webkit-scrollbar,
-.artist-list::-webkit-scrollbar {
-  display: none;
-}
-
-.artist-item {
-  padding: .5rem;
-  display: flex;
-  align-items: center;
-  margin-bottom: 0.625rem;
-  border-radius: .5rem;
 }
 
 .gallery-item {
@@ -220,24 +198,9 @@
   border-radius: .5rem;
 }
 
-.artist-item:hover,
 .gallery-item:hover {
   background-color: var(--white);
   cursor: pointer;
-}
-
-.artist-image {
-  width: 3.125rem;
-  height: 3.125rem;
-  overflow: hidden;
-  border-radius: 50%;
-  margin-right: 0.625rem;
-}
-
-.artist-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 .artwork-section {
@@ -250,26 +213,6 @@
   gap: 8px;
   padding: 8px;
 }
-
-.artist-image img {
-  width: 40px;
-  height: 40px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.artist-title {
-  flex-grow: 1;
-  margin: 0;
-}
-
-.close-icon-right {
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 
 .artwork-card {
   flex-shrink: 0;
@@ -377,11 +320,6 @@
   font-weight: 600;
   color: #333;
 }
-
-/* .selected-gallery-info:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-} */
 
 .close-icon-right {
   cursor: pointer;
