--- a/src/utils.css
+++ b/src/utils.css
@@ -1,8 +1,8 @@
 :root {
     --darkest-blue: #03123c;
     --dark-blue: #000066;
-    --light-blue: #809fff;
-    --lightest-blue: #bfcfff;
+    --light-blue: #56b8f1;
+    --lightest-blue: #d9fbff;
     --off-white: #f8f8f8;
     --white: #fff;
     --dark-grey: #333;
