--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import "utils.css";
+@import "modal.css";
 
 .outer-container {
   display: flex;
@@ -383,7 +384,7 @@
 .home-container .buttons .get-started {
   padding: 0.75rem 1rem;
   border-radius: 0.5rem;
-  background-color: var(--white);
+  background-color: var(--lightest-blue);
   color: var(--darkest-blue);
 }
 
@@ -391,4 +392,21 @@
   cursor: pointer;
   background-color: var(--darkest-blue);
   color: var(--off-white);
+}
+
+.mobile-message {
+  line-height: 1.8rem;
+  display: none;
+  align-self: flex-start;
+  padding: 4rem 0;
+}
+
+@media (max-width: 960px) {
+  .mobile-message {
+    display: block;
+  }
+
+  .inner-container {
+    display: none;
+  }
 }
